[tool.poetry]
name = "lora-dataset-preparer"
version = "0.1.0"
description = ""
authors = ["D4n13l3k00 <d4n13l3k00@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
face-recognition = "^1.3.0"
opencv-python = "^4.8.0.74"
rich = "^13.4.2"
numpy = "^1.25.0"
pillow = "^9.5.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
ruff = "^0.0.277"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
